Fix monaco editor scrollbar issue

--- a/src/core/builtins/quick-code/styles/monaco/_core.scss
+++ b/src/core/builtins/quick-code/styles/monaco/_core.scss
@@ -72,10 +72,6 @@
   right: 4px !important;
 }
 
-.monaco-scrollable-element>.scrollbar {
-  height: 100% !important;
-}
-
 .monaco-custom-checkbox.checked {
   background: #7289da !important;
   color: color('white') !important;
